--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,6 +1,10 @@
 # Use an official Node runtime as a parent image
 FROM node:latest
 
+LABEL AUTHORS="Mouhamed Alioune Diouf, Alassane Diop, Oumar Samb,Samba Diop,Elhadji Malick Lo, Alain Gildas Ogou"
+LABEL DESCRIPTION="This is the Client-Side(frontend) of the Social network project it use NextJS"
+LABEL VERSION="latest"
+
 # Set the working directory in the container
 WORKDIR /app
 
